feat: added find by genres